adding initial structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>Mitos e verdades sobre a doação de sangue</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mitos e Verdades sobre a Doação de Sangue</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Mitos e Verdades sobre a Doação de Sangue</h1>
+    </header>
+    <main>
+        <section class="informacoes">
+            <h2>Informações Importantes</h2>
+            <p>A doação de sangue é um ato de solidariedade que salva vidas. É fundamental entender os critérios e a importância dessa prática.</p>
+            <p>Todos podem ser doadores, desde que atendam aos critérios de saúde e peso.</p>
+        </section>
+
+        <section class="mitos-verdades">
+            <h2>Mitos e Verdades</h2>
+            <ul>
+                <li><strong>Mito:</strong> Você não pode doar sangue se tiver tatuagens.</li>
+                <li><strong>Verdades:</strong> É possível doar sangue após 12 meses da realização de uma tatuagem.</li>
+                <li><strong>Mito:</strong> Doar sangue engorda.</li>
+                <li><strong>Verdade:</strong> A doação de sangue não interfere no peso.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Campanha de Doação de Sangue</p>
+    </footer>
+</body>
+</html>
