--- a/index.html
+++ b/index.html
@@ -4,24 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mitos e Verdades sobre a Doação de Sangue</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f4f4f4;
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #e63946;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <header class="bg-danger text-white text-center p-4">
         <h1>Mitos e Verdades sobre a Doação de Sangue</h1>
     </header>
-    <main>
-        <section class="informacoes">
+    <main class="container mt-4">
+        <section class="informacoes bg-white p-4 rounded shadow-sm mb-4">
             <h2>Informações Importantes</h2>
             <p>A doação de sangue é um ato de solidariedade que salva vidas. É fundamental entender os critérios e a importância dessa prática.</p>
             <p>Todos podem ser doadores, desde que atendam aos critérios de saúde e peso.</p>
         </section>
 
-        <section class="mitos-verdades">
+        <section class="mitos-verdades bg-white p-4 rounded shadow-sm">
             <h2>Mitos e Verdades</h2>
-            <ul>
+            <ul class="list-unstyled">
                 <li><strong>Mito:</strong> Você não pode doar sangue se tiver tatuagens.</li>
-                <li><strong>Verdades:</strong> É possível doar sangue após 12 meses da realização de uma tatuagem.</li>
+                <li><strong>Verdade:</strong> É possível doar sangue após 12 meses da realização de uma tatuagem.</li>
                 <li><strong>Mito:</strong> Doar sangue engorda.</li>
                 <li><strong>Verdade:</strong> A doação de sangue não interfere no peso.</li>
             </ul>
@@ -30,5 +41,9 @@
     <footer>
         <p>&copy; 2024 Campanha de Doação de Sangue</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
