--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 </head>
 <body>
     <header class="bg-danger text-white text-center p-4">
-        <h1>Mitos e Verdades sobre a Doação de Sangue</h1>
+        <div class="row">
+            <div class="col-6">
+                Mitos e Verdades sobre a Doação de Sangue
+            </div>
+            <div class="col-6">
+                <img src="img\logo.jpg" class="img-thumbnail" alt="logo_doacao">
+            </div>
+        </div>
     </header>
     <main class="container mt-4">
         <section class="informacoes bg-white p-4 rounded shadow-sm mb-4">
