--- a/index.html
+++ b/index.html
@@ -353,7 +353,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-2 d-flex align-items-center justify-content-center">
+            <img src="img/logo.jpg" alt="logo_doacao" style="width: 150px;">
+
+        </div>
 
         <div class="col-md-5 p-5 card shadow">
             <div class="text-center mb-3 fs-4">
@@ -490,22 +493,7 @@
       <h2 class="text-center mb-5">Entre em Contato</h2>
       <div class="row">
         <div class="col-md-6">
-          <form>
-            <div class="mb-3">
-              <label for="name" class="form-label">Nome</label>
-              <input type="text" class="form-control" id="name" placeholder="Seu nome">
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="Seu email">
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Mensagem</label>
-              <textarea class="form-control" id="message" rows="5" placeholder="Sua mensagem"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </form>
-        </div>
+            <img src="img\qrcode.png" class="img-thumbnail" alt="Doação de sangue em ação" style="width:300px ;">
         <div class="col-md-6">
           <h5 class="mb-4">Endereço:</h5>
           <p>Rua Exemplo, 123, Centro - Cidade/Estado</p>
