--- a/index.html
+++ b/index.html
@@ -6,116 +6,32 @@
   <title>Campanha de Doação de Sangue</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-    }
-    .hero {
-      background: linear-gradient(rgba(71, 7, 7, 0.8), rgba(55, 1, 1, 0.8)), url('img/img1.jpg') no-repeat center center/cover;
-      color: white;
-      height: 75vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    .card img {
-      object-fit: cover;
-      height: 200px;
-    }
-    footer {
-      text-align: center;
-        padding: 10px 0;
-        background-color: #e63946;
-        color: white;
-    }
-    .nav-link {
-      color: white !important;
-    }
-    /* Styling do acordeão */
-    .accordion-button:not(.collapsed) {
-            background-color: #d9534f; /* Cor de destaque */
-            color: white;
-            font-weight: bold;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Efeito de sombra */
-    }
-
-    .accordion-button {
-        background-color:#c9302c; /* Cor de fundo padrão */
-        color: #ffffff;
-        border: none;
-        transition: all 0.3s ease;
-        font-size: 1.1rem;
-    }
-
-    .accordion-button:hover {
-        background-color: #c9302c;
-        color: white;
-    }
-
-    .accordion-body {
-        background-color: #d7bbbb;
-        padding: 20px;
-        border-radius: 0.25rem;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .accordion-item {
-        border: none;
-        margin-bottom: 1rem;
-    }
-
-    @media (max-width: 768px) {
-    .hero .container-fluid {
-        flex-direction: column; /* Empilha os elementos na vertical */
-    }
-
-    .hero .col-md-6 {
-        text-align: left; /* Alinha o texto à esquerda no mobile */
-    }
-
-    .hero img {
-        display: none; /* Oculta a imagem */
-    }
-
-    .hero p {
-        font-size: 16px !important; /* Reduz o tamanho da fonte */
-    }
-    .hero{
-        height: 70vh;
-        padding: 0px;
-    }
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet">
+  
 </head>
 <body>
-  <header class="bg-danger text-white fw-bolder fs-2 p-4">
+  <header class=" bg-danger text-white fw-bolder fs-2 p-4">
     <div class="row align-items-center">
-        <div class="col-6">
+        <div class=" title col-6">
             Mitos e Verdades sobre a Doação de Sangue
         </div>
-        <div class="col-6 d-flex justify-content-end">
+        <div class="col-6 d-flex justify-content-end logo">
             <img src="img/logo.jpg" class="img-thumbnail" alt="logo_doacao" style="width: 100px;">
         </div>
     </div>
 </header>
 
   <!-- Hero Section -->
-<section class="hero">
+<section class="hero">  
 
         <div class="container-fluid d-flex align-items-center">
             <div class="col-md-6 col-sm-6">
                 <img src="img\inicio.jpg " class="img-fluid w-100" alt="logo_doacao">
             </div>
             <div class="col-sm-6 col-sm-6">
-                <p class="p-md-5 p-sm-2 fs-4">
-                    A doação de sangue é um ato de solidariedade e amor ao próximo, essencial para salvar vidas e garantir o funcionamento dos serviços de saúde. Contudo, ainda existem muitos mitos e preconceitos que cercam esse gesto tão nobre. Compreender a verdade por trás desses mitos é fundamental para incentivar mais pessoas a se tornarem doadoras. Neste espaço, desmistificaremos algumas das crenças mais comuns sobre a doação de sangue, esclarecendo informações e promovendo a conscientização. Se você já teve dúvidas sobre o processo, requisitos ou impactos da doação, aqui você encontrará as respostas que precisa. Vamos juntos derrubar os mitos e destacar as verdades, ajudando a construir uma cultura de doação e cuidado com a vida!
+                <p class="p-md-5 fs-4">
+                    A doação de sangue é um ato de solidariedade e amor ao próximo, essencial para salvar vidas e garantir o funcionamento dos serviços de saúde. Contudo, ainda existem muitos mitos e preconceitos que cercam esse gesto tão nobre. Compreender a verdade por trás desses mitos é fundamental para incentivar mais pessoas a se tornarem doadoras. Neste espaço, desmistificaremos algumas das crenças mais comuns sobre a doação de sangue, esclarecendo informações e promovendo a conscientização.
                 </p>
-                <!-- <div class="d-grid col-6 pt-5 justify-content-end">
-                    <a class="btn btn-lg btn-danger " href="#" role="button">Saiba mais</a>
-    
-                </div> -->
             </div>       
     
         </div>
@@ -123,23 +39,23 @@
 </section>
 
   <!-- About Section -->
-  <!-- <section id="about" class="py-5">
+  <section id="about" class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <h2 class="mb-4">Sobre a Campanha</h2>
-          <p class="lead">Nossa campanha visa conscientizar a importância da doação de sangue e facilitar o processo para doadores de todas as idades. Com apenas uma doação, você pode salvar até quatro vidas!</p>
+          <p class="lead">Assim como a vacina contra a COVID-19 protegeu milhões de pessoas ao redor do mundo, a doação de sangue também atua como uma cura essencial para inúmeras situações de emergência e tratamentos médicos. Cada bolsa de sangue doada pode ser o ponto de virada para quem passa por cirurgias complexas, tratamentos de câncer e doenças crônicas e até mesmo vítimas de acidentes graves. Assim como nos unimos para vencer uma pandemia, podemos nos unir para salvar vidas todos os dias. O seu ato de solidariedade é simples, mas o impacto é imenso. Doe sangue e ajude a proteger quem mais precisa dessa “vacina” que só você pode fornecer!</p>
         </div>
         <div class="col-md-6">
           <img src="img/about-image.jpg" class="img-fluid rounded" alt="Imagem sobre a campanha">
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
-  <div class="container-fluid p-5">
-    <div class="row">
-        <div class="col-md-5 col-sm-5 p-5 card shadow">
+  <div class="container-fluid p-5 card-mobile">
+    <div class="row ">
+        <div class=" col-md-5 col-sm-5 p-5 card shadow">
             <div class="text-center mb-3 fs-4">
                 <h2>Mitos</h2>
                 <p>Desvende as verdades por trás dos mitos mais comuns sobre a doação de sangue.</p>
@@ -280,27 +196,9 @@
     </div>
 </div>
   
-
-  <!-- Contact Section -->
-  <!-- <section id="contact" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-5">Entre em Contato</h2>
-      <div class="row">
-        <div class="col-md-6">
-            <img src="img\qrcode.png" class="img-thumbnail" alt="Doação de sangue em ação" style="width:300px ;">
-        <div class="col-md-6">
-          <h5 class="mb-4">Endereço:</h5>
-          <p>Rua Exemplo, 123, Centro - Cidade/Estado</p>
-          <h5 class="mb-4">Telefone:</h5>
-          <p>(00) 0000-0000</p>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <!-- Footer -->
   <footer class=" container-fluid bg-danger text-white fs-4">
-    <p>&copy; 2024 Campanha de Doação de Sangue. Todos os direitos reservados.</p>
+    <p>&copy; 2024 Campanha de Doação de Sangue</p>
   </footer>
 
   <!-- Bootstrap JS -->
