--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 </section>
 
   <!-- About Section -->
-  <section id="about" class="py-5">
+  <section class="py-5">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+      <div class="row" >
+  <section class="py-5">
+        <div class="col-md-6" id="about">
           <h2 class="mb-4">Sobre a Campanha</h2>
           <p class="lead">Assim como a vacina contra a COVID-19 protegeu milhões de pessoas ao redor do mundo, a doação de sangue também atua como uma cura essencial para inúmeras situações de emergência e tratamentos médicos. Cada bolsa de sangue doada pode ser o ponto de virada para quem passa por cirurgias complexas, tratamentos de câncer e doenças crônicas e até mesmo vítimas de acidentes graves. Assim como nos unimos para vencer uma pandemia, podemos nos unir para salvar vidas todos os dias. O seu ato de solidariedade é simples, mas o impacto é imenso. Doe sangue e ajude a proteger quem mais precisa dessa “vacina” que só você pode fornecer!</p>
         </div>
