--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
 </section>
 
   <!-- About Section -->
-    <div class="container-fluid p-4 shadow rounded m-2 text-white" style="background-color: #801919;">
+    <div class="container-fluid m-2 text-white" >
         <div class="d-flex">
-            <div class="col-1">
-
+            <div class="col-md-3 shadow rounded">
+                <img src="img/campanha.jpg" class="img-fluid" alt="Imagem sobre a campanha" style="width:100%">
             </div>
-            <div class="col-md-3 p-4">
-                <img src="img/campanha.jpg" class="img-fluid shadow rounded" alt="Imagem sobre a campanha" style="width:100%">
-            </div>
-            <section class="col-md-8 align-items-center p-4" id="about">
+            <div class="col-1"></div>
+            <section class="col-md-8 align-items-center p-4 rounded" id="about" style="background-color: #801919;">
                 <p class="fs-4">Uma mãe esperando uma transfusão para ver seu filho crescer, um jovem lutando contra uma doença rara, uma vítima de acidente no pronto-socorro, todos esperando pela única coisa que poderia lhes dar uma segunda chance: sangue.</p>
                 <p class="fs-4">
                 A vida pode mudar em um instante. Para outros, a doação de sangue é a única ponte entre a vida e a morte. Para quem recebe, cada gota é uma forma de amor, um ato de solidariedade que supera qualquer distância.
@@ -73,7 +71,6 @@
                 Junte-se a nós nesta missão de salvar vidas. Doe sangue. Pois a vida de alguém pode depender disso, e não há gesto mais forte do que uma mão estendida que salva uma vida.
                 </p>
             </section>
-            <div class="col-1"></div>
           
         </div>
     </div>
