--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
+  <link rel="icon" href="img\gota-de-sangue.png" type="image/x-icon">
+
   
   <style>
       body {
@@ -98,7 +100,7 @@
                 </nav>
             </div>
             <div class="col-2 d-flex logo justify-content-end">
-                <img src="img/logo.jpg" class="img-thumbnail" alt="logo_doacao" style="width: 100px;">
+                <img src="img\doacao-de-sangue.png" class="img-thumbnail" alt="logo_doacao" style="width: 100px;">
             </div>
         </div>
     </header>
@@ -111,14 +113,14 @@
   </section>
 
   <!-- Mitos e Verdades Section -->
-  <div id="mitos_verdades" class="container-fluid p-5 card-mobile">
+  <div id="mitos_verdades" class="container-fluid p-5 ">
     <div class="container-fluid text-center p-2 fs-4">
         <h1>Você sabia que doar sangue é um processo fácil e indolor?</h1>
         <p class="m-4">Doar sangue é simples, rápido e salva vidas. Para doar, é preciso estar saudável, pesar mais de 50kg, ter entre 16 e 69 anos e apresentar um documento com foto. Todo o processo leva cerca de 40 minutos, e a coleta em si, apenas 10 a 15 minutos. Basta um gesto para fazer a diferença!</p>
     </div>
     
-    <div class="row m-3">
-        <div class="col-md-5 col-sm-5 p-5 card shadow">
+    <div class="row container-fluid">
+        <div class="padding_mobile col-md-5 p-5 card shadow container-fluid">
             <div class="text-center mb-3 fs-4">
                 <h2>Mitos</h2>
                 <p>Desvende as verdades por trás dos mitos mais comuns sobre a doação de sangue.</p>
@@ -164,10 +166,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2 col-sm-2 d-flex align-items-center justify-content-center">
-            <img src="img/logo.jpg" alt="logo_doacao" style="width: 150px;">
+        <div class="col-md-2 d-flex align-items-center justify-content-center">
+            <img src="img/doacao-de-sangue.png" alt="logo_doacao" style="width: 150px;">
         </div>
-        <div class="col-md-5 col-sm-5 p-5 card shadow">
+        <div class=" padding_mobile col-md-5 col-sm-5 p-5 card shadow">
             <div class="text-center mb-3 fs-4">
                 <h2>Verdades</h2>
                 <p>Conheça os benefícios da doação de sangue.</p>
