--- a/index.html
+++ b/index.html
@@ -10,76 +10,6 @@
   <link href="styles.css" rel="stylesheet">
   <link rel="icon" href="img\gota-de-sangue.png" type="image/x-icon">
 
-  
-  <style>
-      body {
-          font-family: 'Poppins', sans-serif;
-          background-color: #f5f5f5;
-          color: #333;
-      }
-
-      header {
-          background-color: #801919;
-          color: white;
-      }
-
-      .navbar .nav-link {
-          color: white;
-          font-weight: 600;
-          padding: 10px 20px;
-          transition: color 0.3s;
-      }
-
-      .navbar .nav-link:hover {
-          color: #ffcccb;
-      }
-
-      /* section {
-          padding: 50px 0;
-      } */
-
-      .card {
-          transition: transform 0.3s, box-shadow 0.3s;
-          border: none;
-          border-radius: 20px;
-      }
-
-      .card:hover {
-          transform: translateY(-10px);
-          box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      }
-
-      .accordion-button {
-          background-color: #801919;
-          color: white;
-          font-weight: 600;
-          transition: background-color 0.3s;
-      }
-
-      .accordion-button:not(.collapsed) {
-          background-color: #bf4d4d;
-      }
-
-      footer {
-          background-color: #801919;
-          color: white;
-          padding: 20px 0;
-          text-align: center;
-      }
-      
-      .btn-custom {
-          background-color: #801919;
-          color: white;
-          padding: 10px 20px;
-          border-radius: 25px;
-          transition: background-color 0.3s;
-      }
-
-      .btn-custom:hover {
-          background-color: #bf4d4d;
-      }
-  </style>
-  
 </head>
 <body>
 
@@ -99,7 +29,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-2 d-flex logo justify-content-end">
+            <div class="col-2 d-flex logo justify-content-center">
                 <img src="img\doacao-de-sangue.png" class="img-thumbnail" alt="logo_doacao" style="width: 100px;">
             </div>
         </div>
@@ -204,18 +134,32 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                            Outras informações relevantes
+                            Não há outro meio de repor sangue, se não pela doação
                         </button>
                     </h2>
                     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
                         <div class="accordion-body">
-                            <strong>Detalhes adicionais podem ser adicionados aqui conforme necessário.</strong>
+                            <strong>o sangue humano é insubstituível nos procedimentos médicos 
+                                Não existe produção de sangue artificialmente e a única maneira de repor esse líquido tão essencial à vida no organismo é através da doação. </strong>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="container-fluid bg-body-tertiary d-flex justify-content-center align-items-center col-md-12">
+        <div class="text-center p-4">
+            <div class="fs-3">
+                Acesse nosso quiz e entenda mais sobre o assunto:
+            </div>
+            <div>
+                <a href="https://forms.office.com/pages/responsepage.aspx?id=p9XLFJTsukazFMwPyXKhYZuSZM5f-SFHs7niIh5JekxURVZIS0dXMUtDTDVWNk5DWVFJNDkzWURYMi4u&origin=lprLink&route=shorturl" target="_blank">
+                    <img src="img/frame.png" class="img-fluid rounded shadow qrcode" alt="QR code do quiz" style="width: 25%;">
+                </a>
+            </div>
+        </div>
+    </div>
+    
   </div>
 
   <!-- About Section -->
@@ -225,7 +169,7 @@
             <img src="img/campanha.jpg" class="img-fluid rounded mb-4" alt="Imagem sobre a campanha" style="width: 70%;">
         </div>
         <div class="col-md-7 text-justify">
-            <div class="p-4 rounded" id="about">
+            <div class="p-4 rounded">
                 <p class="fs-5">Uma mãe esperando uma transfusão para ver seu filho crescer, um jovem lutando contra uma doença rara, uma vítima de acidente no pronto-socorro, todos esperando pela única coisa que poderia lhes dar uma segunda chance: sangue.</p>
                 <p class="fs-5">A vida pode mudar em um instante. Para outros, a doação de sangue é a única ponte entre a vida e a morte. Para quem recebe, cada gota é uma forma de amor, um ato de solidariedade que supera qualquer distância.</p>
                 <p class="fs-5">O que para você pode ser apenas uma pequena ação, para muitos é o que lhes dá força para continuar. Cada doação de sangue tem o poder de salvar até quatro vidas. E a sua vida pode ser um divisor de águas para quem está desesperadamente esperando por ajuda.</p>
@@ -235,12 +179,6 @@
         </div>
     </div>
 </section>
-
-
-  
-
-  <!-- Cards Section -->
- 
 
 <div class="container mt-5">
     <div class="row">
@@ -282,12 +220,10 @@
     </div>
 </div>
 
-  <!-- Footer -->
   <footer class="container-fluid text-white fs-4">
     <p>&copy; 2024 Campanha de Doação de Sangue</p>
   </footer>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
