ajustar links externos

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                       <br><br>
                       Nosso objetivo é conscientizar nossa comunidade acadêmica e o público em geral sobre a importância da doação de sangue e combater mitos que possam impedir novos doadores. Queremos ajudar a criar uma cultura de doação regular, garantindo que mais pessoas estejam preparadas para contribuir com essa causa vital. Participe e faça a diferença com a gente!
                   </div>
-              </div>
-              
+              </div>              
           </div>
   </div>
 </div>
@@ -248,7 +247,16 @@
             </div>
         </div>
     </div>
+    <div class="card d-flex">
+        <div class="fs-3 p-4 justify-content-center">
+            Todos os dados foram extraídos do site oficial do <a href="https://www.hemominas.mg.gov.br/doacao-e-atendimento-ambulatorial/doacao-de-sangue/condicoes-e-restricoes">Hemominas</a>
+        <div class="fs-3 p-4 justify-content-center">
+            Agende seu horário: <a href="https://www.mg.gov.br/agendamento_servico/doacao-de-sangue">Aqui</a>
+        </div>
+        </div>
+      </div>
 </div>
+
 
   <footer class="container-fluid text-white fs-4">
     <p>&copy; 2024 Campanha de Doação de Sangue</p>
