--- a/index.html
+++ b/index.html
@@ -176,18 +176,29 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-body-tertiary d-flex justify-content-center align-items-center col-md-12">
-        <div class="text-center p-4">
-            <div class="fs-3">
-                Acesse nosso quiz e entenda mais sobre o assunto:
+    <div class="container-fluid card bg-body-tertiary m-4 d-flex justify-content-center align-items-center">
+        <div class="row col-md-12">
+            <div class="text-center p-4 col-md-6">
+                <div class="fs-4">
+                    Acesse nosso quiz e entenda mais sobre o assunto:
+                </div>
+                <div>
+                    <a href="https://forms.office.com/pages/responsepage.aspx?id=p9XLFJTsukazFMwPyXKhYZuSZM5f-SFHs7niIh5JekxURVZIS0dXMUtDTDVWNk5DWVFJNDkzWURYMi4u&origin=lprLink&route=shorturl" target="_blank">
+                        <img src="img/frame.png" class="img-fluid rounded shadow m-4 qrcode" alt="QR code do quiz" style="width: 25%;">
+                    </a>
+                </div>
             </div>
-            <div>
-                <a href="https://forms.office.com/pages/responsepage.aspx?id=p9XLFJTsukazFMwPyXKhYZuSZM5f-SFHs7niIh5JekxURVZIS0dXMUtDTDVWNk5DWVFJNDkzWURYMi4u&origin=lprLink&route=shorturl" target="_blank">
-                    <img src="img/frame.png" class="img-fluid rounded shadow qrcode" alt="QR code do quiz" style="width: 25%;">
-                </a>
+            <div class="text-center p-4 col-md-6">
+                <div class="fs-4 p-4">
+                    Todos os dados foram extraídos do site oficial do <a href="https://www.hemominas.mg.gov.br/doacao-e-atendimento-ambulatorial/doacao-de-sangue/condicoes-e-restricoes">Hemominas</a>
+                </div>
+                <div class="fs-4 p-4">
+                    Agende seu horário <a href="https://www.mg.gov.br/agendamento_servico/doacao-de-sangue">Aqui</a>
+                </div>
             </div>
         </div>
     </div>
+    
     
   </div>
 
@@ -251,7 +262,7 @@
         <div class="fs-3 p-4 justify-content-center">
             Todos os dados foram extraídos do site oficial do <a href="https://www.hemominas.mg.gov.br/doacao-e-atendimento-ambulatorial/doacao-de-sangue/condicoes-e-restricoes">Hemominas</a>
         <div class="fs-3 p-4 justify-content-center">
-            Agende seu horário: <a href="https://www.mg.gov.br/agendamento_servico/doacao-de-sangue">Aqui</a>
+            Agende seu horário <a href="https://www.mg.gov.br/agendamento_servico/doacao-de-sangue">Aqui</a>
         </div>
         </div>
       </div>
